@@ -27,6 +27,7 @@ moc_*
 rc.syd
 tests/sycapture
 tests/syd
+tests/syethmonitortest
 tests/sygpiotest
 tests/symetertest
 tests/synodetest
